# research_toolkit

./: .gitignore  .gitleaksignore  BURN_IN_NOTES.md  CLAUDE.md  Makefile  README.md  burn_in.yml  pyproject.toml
docs/: ROADMAP_v2_6.md  architecture.md  getting_started.md  other_computer_pickup.md  roadmap_v1_2_through_v1_5.md  subagent_audit.md  synthesis_kb_migration_2026-05-21.md  troubleshooting.md
evals/: dogfood_metrics.csv
references/: agent_discipline.md  audit_protocol.md  citation_rules.md  dataset_sources.md  dual_audience_design.md  scope_planning.md  strict_live_v2.md  topic_discovery_protocol.md  url_check_protocol.md  v2_2_design_backlog.md  v2_2_skill_audit.md  workflow_overview.md
scripts/: __init__.py  assemble_artifacts.py  backfill_ledger.py  backlog_stamp.py  build_claim_graph.py  build_dashboard.py  build_excerpt_anchor.py  build_medium_dataset_fixture.py  build_medium_fixture.py  bundle_research_corpus.py  burn_in_query.py  cache_health.py  cache_source.py  cli.py  compare_v2_v3.py  compose_cross_project_kg.py  consolidate_local_caches.py  dataset_synthesize.py  dedup_cache_captures.py  migrate_manifest_paths.py  normalize_agent_index_display.py  precache_docling_models.py  reanchor_evidence_ledger.py  reextract_low_quality.py  reextract_pdfs.py  render_agent_index.py  repair_evidence_bullet_atoms.py  research_kb_export.py  resume_gather_from_cache.py  retry_escalations.py  retry_escalations_v2.py  scaffold_synthesis_entry.py  source_tiers.py  synthesis_export.py  verify_citations.py
templates/: 5_bullet_entry.template.md  agent_index_README.template.md  bib_ledger.template.yml  bib_primary_source_cache.template.yml  cache_manifest.template.yml  claim_graph.template.jsonl  dashboard.template.md  dataset_5_bullet_entry.template.md  dataset_ledger.template.yml  dataset_synthesis_recipe.template.yml  dossier_table.template.md  evidence_ledger.template.yml  gather_trace.template.yml  pre_selection_manifest.template.yml  render_config.example.yml  render_config.schema.yml  research_kb_export.template.jsonl  research_plan.template.md  synthesis_entry.template.yml  topic_backlog.template.yml
tests/: conftest.py  test_agent_index_display.py  test_assemble_artifacts.py  test_backlog_stamp.py  test_build_excerpt_anchor.py  test_cache_source.py  test_cache_source_provenance.py  test_cli.py  test_compose_cross_project_kg.py  test_dataset_synthesize.py  (+24 more)
(+162 files in other folders)
