[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "research_toolkit"
version = "2.3.0"
description = "Claude Code skill collection for strict-live research dossiers, evidence caching, and research-kb export."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "pdfplumber>=0.11",
  # docling 2.30+ requires docling-parse 5.x which currently ships source-only
  # on PyPI (no wheels for darwin x86_64 py3.12); the source build fails with
  # cstdint not found. docling 2.29.x works with docling-parse 4.7.2 which has
  # binary wheels. Re-evaluate when docling-parse 5.x ships wheels.
  "docling>=2.0,<2.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "playwright>=1.40",
  "reportlab>=4.0",
  "pypdf>=4.0",
]
synthesis = [
  # Required for /dataset-synthesize (closes #1). Lazy-imported by
  # scripts/dataset_synthesize.py so --validate-only works without this.
  "anthropic>=0.40",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["validators*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
